--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.109.0
-uvicorn==0.23.2
+fastapi==0.95.0
+uvicorn==0.22.0
 SQLAlchemy==2.0.25
 pydantic==1.10.13
-python-dotenv==1.0.1
+python-dotenv==1.0.0
+python-jose[cryptography]==3.3.0
